<resources>
    <string name="app_name">SafePass</string>
    <string name="verification">Verification</string>
    <string name="we_will_send_you_an_one_time_code_on_this_mobile_number">We will send you an one time code on this mobile number</string>
    <string name="_972">+972</string>
    <string name="didn_t_receive_the_code">Didn\'t receive the code ?</string>
    <string name="IL_num">+972</string>
    <string name="LBL_verification_Id">verificationId</string>
    <string name="LBL_phone">phone</string>
    <string name="send_code">Send code !</string>
    <string name="verify">Verify</string>
    <string name="passwords">Passwords</string>
    <string name="password_name">Password Name</string>
    <string name="url">URL: </string>
    <string name="password">Password: </string>
    <string name="phone_number_hint">543367580</string>


    <string name="open">Open Navigation Drawer</string>
    <string name="close">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

//keys file name
    <string name="ks_file_name">keys.ks</string>


</resources>