<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:backgroundTint="#D9EAF4"
    android:elevation="3dp"
    app:cardCornerRadius="15dp"
    app:cardElevation="5dp"
    android:layout_marginBottom="20dp"
    >

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="20dp"
        android:gravity="start"
        android:orientation="horizontal">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/card_IMG_img"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/almost_circle" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/password_TXV_password_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gafata"
                android:text="@string/password_name"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/password_LLC_url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/password_TXV_password_name"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/gafata"
                    android:text="@string/url"
                    android:textColor="#A8000000"
                    android:textSize="14sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/password_TXV_url"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/gafata"
                    android:text="www.google.com"
                    android:maxLength="28"
                    android:textColor="#A8000000"
                    android:textSize="14sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/password_LLC_url"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gafata"
                    android:text="@string/password"
                    android:textColor="#A8000000"
                    android:textSize="14sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/password_TXV_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gafata"
                    android:inputType="textPassword"
                    android:text="123456789"
                    android:maxLength="35"
                    android:textColor="#A8000000"
                    android:textSize="14sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </RelativeLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|end"
        android:layout_marginEnd="20dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/password_IMB_edit_password"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_edit"
            android:backgroundTint="#7A7878" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/password_IMB_see_password"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:padding="4dp"
            android:background="@drawable/ic_eye"
            android:backgroundTint="#7A7878" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/password_IMB_copy_password"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:padding="4dp"
            android:background="@drawable/ic_copy"
            android:backgroundTint="#7A7878" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.cardview.widget.CardView>